--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
-*{
+﻿*{
     padding: 0;
     margin: 0;
 }
@@ -20,7 +20,7 @@ input,button{
     font-style: normal;
 }
 .header{
-    height: 170px;
+    height: 171px;
     background-color: #022066;
 }
 .inner{
